--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,10 @@ buildscript {
         google()
         mavenCentral()
     }
+    dependencies {
+        // Navigation
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
+    }
 }
 
 plugins {
