--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,12 @@ plugins {
 
 android {
     namespace 'com.example.csscorechallenge'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.csscorechallenge"
         minSdk 28
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -37,6 +37,11 @@ android {
     buildFeatures {
         viewBinding true
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
@@ -56,14 +61,35 @@ dependencies {
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'androidx.test.ext:junit-ktx:1.1.3'
+
+    // Mockito
+    testImplementation 'org.mockito:mockito-core:4.8.1'
+    testImplementation "org.mockito:mockito-inline:3.11.2"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
+    androidTestImplementation 'org.mockito:mockito-android:4.8.1'
+
+    // Robolectric
+    testImplementation "org.robolectric:robolectric:4.9"
+    androidTestImplementation "org.robolectric:robolectric:4.9"
 
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'javax.inject:javax.inject:1'
 
-    testImplementation 'junit:junit:4.13.2'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
 
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+
+    testImplementation 'junit:junit:4.13.2'
+//    testImplementation "android.arch.core:core-testing:1.1.1"
+    testImplementation 'androidx.test:core-ktx:1.4.0'
+
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
