Feature: adds Timber dependency and changes to rounded date view from linear layout to text view

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,14 @@ dependencies {
     // Lottie
     implementation 'com.airbnb.android:lottie:5.2.0'
 
+    // Timber
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    // Room
+//    implementation "androidx.room:room-runtime:2.6.0"
+//    annotationProcessor "androidx.room:room-compiler:2.6.0"
+//    implementation "androidx.room:room-ktx:2.6.0"
+
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
